--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@aws-amplify/ui-react": "^3.0.1",
         "@solana/wallet-adapter-wallets": "^0.16.1",
+        "aws-amplify": "^4.3.26",
         "bootstrap": "^5.1.3",
         "leaflet": "^1.8.0",
         "next": "12.1.6",
@@ -29,6 +30,7 @@
         "redux-thunk": "^2.4.1",
         "secp256k1": "^4.0.3",
         "swiper": "^8.2.2",
+        "uuid": "^8.3.2",
         "wowjs": "^1.1.3"
     }
 }
