--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -50,11 +50,13 @@
           },
           "additionalAuthenticationProviders": [
             {
+              "authenticationType": "AWS_IAM"
+            },
+            {
               "authenticationType": "API_KEY",
               "apiKeyConfig": {
-                "apiKeyExpirationDays": 60,
-                "apiKeyExpirationDate": "2022-08-23T10:24:42.402Z",
-                "description": "apikey"
+                "apiKeyExpirationDays": 30,
+                "description": "api key description"
               }
             }
           ]
