--- a/.gitignore
+++ b/.gitignore
@@ -104,7 +104,7 @@ dist
 .tern-port
 
 awsconfiguration.json
-amplifyconfiguration.json
+# amplifyconfiguration.json
 amplifyconfiguration.dart
 amplify-build-config.json
 amplify-gradle-config.json
@@ -123,9 +123,9 @@ amplify/backend/.temp
 build/
 dist/
 node_modules/
-aws-exports.js
-awsconfiguration.json
-amplifyconfiguration.json
+# aws-exports.js
+# awsconfiguration.json
+#amplifyconfiguration.json
 amplifyconfiguration.dart
 amplify-build-config.json
 amplify-gradle-config.json
