--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@aws-amplify/ui-react": "^6.1.14",
+		"@redux-devtools/extension": "^3.3.0",
 		"@solana/wallet-adapter-wallets": "^0.19.32",
 		"aws-amplify": "^6.4.4",
 		"bootstrap": "^5.3.3",
