--- a/src/amplifyconfiguration.json
+++ b/src/amplifyconfiguration.json
@@ -1,3 +1,7 @@
 {
-  "aws_project_region": "us-east-1"
+  "aws_project_region": "us-east-1",
+  "aws_appsync_graphqlEndpoint": "https://fzdigwnsjjb3ziqluprjckhrfe.appsync-api.us-east-1.amazonaws.com/graphql",
+  "aws_appsync_region": "us-east-1",
+  "aws_appsync_authenticationType": "API_KEY",
+  "aws_appsync_apiKey": "da2-7hfrvool6bajjetoao2nbgianm"
 }
